exports[`ButtonLink React component Renders Default correctly 1`] = `
<a
  className="buttonLink primary enabled"
  href="http://numenta.com"
  onClick={[Function]}
  target={undefined}>
  Title
</a>
`;

exports[`ButtonLink React component Renders Disabled correctly 1`] = `
<a
  className="buttonLink primary disabled"
  href="http://numenta.com"
  onClick={[Function]}
  target={undefined}>
  Title
</a>
`;
